# libvmi

./: .gitignore  .travis.yml  CMakeLists.txt
cmake/modules/: Libtool.cmake
examples/: CMakeLists.txt
libmicrovmi/: CMakeLists.txt
libvmi/: CMakeLists.txt  cache.c  config.h.in  core.c  debug.h
libvmi/driver/: memory_cache.c
libvmi/driver/kvm/: CMakeLists.txt  kvm.c  kvm_private.h
libvmi/driver/xen/: xen.c  xen_events_abi.h  xen_private.h
tests/: CMakeLists.txt  check_runner.c  test_read.c  test_shm_snapshot.c  test_translate.c
tools/vmifs/: CMakeLists.txt
